# VecMate

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: lib.rs  tests.rs
src/vec2/: consts.rs  impls.rs  mod.rs
