[package]
name = "vecmate"
version = "0.2.2"
authors = ["Ztry8 (AslanD)"]
edition = "2024"
description = "Lightweight, zero-dependency, type-agnostic library for vector math."
documentation = "https://docs.rs/vecmate/"
readme = "README.md"
repository = "https://github.com/Ztry8/VecMate"
license = "BSD-3-Clause"
keywords = ["vector", "gamedev", "math", "geometry", "linear-algebra"]
categories = ["game-development", "mathematics", "data-structures"]
